add dependency injection

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-REDIS_PORT = 6379
+#STORAGE = Redis , to use redis, any other value will use Local Storage
+STORAGE = Redis
+#If STORAGE = Redis , use REDIS_ADDR var to tell the program which redis db to use
+REDIS_ADDR = localhost:6379
